--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,12 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+        implementation fileTree(dir: 'libs', include: ['*.jar'])
+    })
+    implementation 'com.google.android.gms:play-services:8.4.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.google.firebase:firebase-messaging:17.6.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
