--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -20,8 +21,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.google.android.gms:play-services:9.2.0'
+    implementation 'com.android.support:multidex:1.0.1'
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
         implementation fileTree(dir: 'libs', include: ['*.jar'])
     })
@@ -35,6 +38,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-    compile 'com.scaledrone:scaledrone-java:0.6.0' //Scaldrone realtime messaging functionality
+    implementation 'com.scaledrone:scaledrone-java:0.6.0'
+    //Scaldrone realtime messaging functionality
 
 }
